--- a/causes.html
+++ b/causes.html
@@ -68,7 +68,7 @@
           <!--//search-right-->
           </li>
           <li class="align-self">
-            <a href="#donate" class="btn btn-style btn-primary ml-lg-3 mr-lg-2"><span class="fa fa-heart mr-1"></span> Donate</a>
+            <a href="https://rzp.io/i/TB6XE3B"target="_blank" class="btn btn-style btn-primary mt-sm-5 mt-4"><span class="fa fa-heart mr-1"></span> Donate Now</a>
           </li>
         </ul>
       </div>
@@ -295,9 +295,8 @@
                             donations, after their first month’s donation). You will get quarterly updates on how you
                             are making a difference.</li>
                     </ul>
-                    <a href="#donate" class="btn btn-style btn-primary mt-md-4 mt-2"> I Want to donate</a>
+                    <a href="https://rzp.io/i/TB6XE3B"target="_blank" class="btn btn-style btn-primary mt-md-4 mt-2"> I Want to donate</a>
                 </div>
-            </div>
         </div>
     </div>
 </section>
@@ -334,43 +333,42 @@
                       <div class="d-grid grid-col-4 grids-content">
                           <div class="column">
                               <h4>Our Address</h4>
-                                <p>235 Terry, 10001 20C Trolley Square,
-                                  DE 19806  U.S.A.</p>
-                          </div>
-                          <div class="column">
-                              <h4>Call Us</h4>
-                              <p>Mon - Fri 10:30 -18:00</p>
-                              <p><a href="tel:+44-000-888-999">+44-000-888-999</a></p>
-                          </div>
-                          <div class="column">
-                              <h4>Mail Us</h4>
-                              <p><a href="mailto:info@example.com">info@example.com</a></p>
-                              <p><a href="mailto:no.reply@example.com">no.reply@example.com</a></p>
-                          </div>
-                          <div class="column">
-                              <h4>Follow Us On</h4>
-                              <ul>
-                                  <li><a href="#facebook"><span class="fa fa-facebook"
-                                              aria-hidden="true"></span></a>
-                                  </li>
-                                  <li><a href="#linkedin"><span class="fa fa-linkedin"
-                                              aria-hidden="true"></span></a>
-                                  </li>
-                                  <li><a href="#twitter"><span class="fa fa-twitter"
-                                              aria-hidden="true"></span></a>
-                                  </li>
-                                  <li><a href="#google"><span class="fa fa-google-plus"
-                                              aria-hidden="true"></span></a>
-                                  </li>
-                                  <li><a href="#github"><span class="fa fa-github" aria-hidden="true"></span></a>
-                                  </li>
+                              <p>16, Knowledge Park II, IILM University, Greater Noida.</p>
+                            </div>
+                            <div class="column">
+                                <h4>Call Us</h4>
+                                <p>Mon - Fri 10:30 -18:00</p>
+                                <p><a href="tel:+91-9999618958 / +91-9999618928">91-9999618958 / +91-9999618928</a></p>
+                            </div>
+                            <div class="column">
+                                <h4>Mail Us</h4>
+                                <p><a href="mailto:admissions@iilmgsm.ac.in">admissions@iilmgsm.ac.in</a></p>
+                                
+                            </div>
+                            <div class="column">
+                                <h4>Follow Us On</h4>
+                                <ul>
+                                    <li><a href="https://www.facebook.com/iilmuniversity/"target="_blank"><span class="fa fa-facebook"
+                                                aria-hidden="true"></span></a>
+                                    </li>
+                                    <li><a href="https://www.linkedin.com/school/iilm-university-gurugram/"target="_blank"><span class="fa fa-linkedin"
+                                                aria-hidden="true"></span></a>
+                                    </li>
+                                    <li><a href="https://twitter.com/IilmInstitute/"target="_blank"><span class="fa fa-twitter"
+                                                aria-hidden="true"></span></a>
+                                    </li>
+                                    <li><a href="https://www.instagram.com/iilmuniversity_greaternoida/"target="_blank"><span class="fa fa-instagram"
+                                                aria-hidden="true"></span></a>
+                                    </li>
+                                    <li><a href="https://www.youtube.com/c/IILMInstituteforHigherEducation/"target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
+                                    </li>
                               </ul>
                           </div>
                       </div>
                   </div>
                   <div class="footers14-bottom d-flex">
                       <div class="copyright">
-                          <p>© 2022 Save Poor by Dhiraj Kumar Tiwari. All rights reserved. </p>
+                          <p>© 2022 Save Poor by Dhiraj Kumar Tiwari(36), Naveen Kumar Roy (64), Atul Prem (28). All rights reserved. </p>
                       </div>
                       <div class="language-select d-flex">
                           <span class="fa fa-language" aria-hidden="true"></span>
