--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
           <!--//search-right-->
           </li>
           <li class="align-self">
-            <a href="donate.html" class="btn btn-style btn-primary ml-lg-3 mr-lg-2"><span class="fa fa-heart mr-1"></span> Donate</a>
+            <a href="https://rzp.io/i/TB6XE3B"target="_blank" class="btn btn-style btn-primary mt-sm-5 mt-4"><span class="fa fa-heart mr-1"></span> Donate</a>
           </li>
         </ul>
       </div>
@@ -91,6 +91,7 @@
   </div>
 </header>
 <!-- //header -->
+
 <div class="inner-banner">
     <section class="w3l-breadcrumb py-5">
         <div class="container py-lg-5 py-md-3">
@@ -131,11 +132,12 @@
                     <div class="col-lg-4 cont-details">
                         <address>
                             <h5 class="">Contact Address</h5>
-                            <p><span class="fa fa-map-marker"></span>235 Terry, 10001 20C Trolley Square, DE 19806 U.S.A. </p>
-                            <p> <a href="mailto:info@example.com"><span
-                                        class="fa fa-envelope"></span>info@example.com</a></p>
-                            <p><span class="fa fa-phone"></span><a href="tel:+44-000-888-999"> +44-000-888-999</a></p>
-                            <a href="donate.html" class="btn btn-style btn-outline-primary mt-4">
+                            <p><span class="fa fa-map-marker"></span>Plot No. 16-18, Knowledge Park II,
+                              Greater Noida, Uttar Pradesh 201306 </p>
+                            <p> <a href="mailto:admissions.gn@iilm.edu"><span
+                                        class="fa fa-envelope"></span>admissions.gn@iilm.edu</a></p>
+                            <p><span class="fa fa-phone"></span><a href="tel:+91-8860427537"> +91-8860427537</a></p>
+                            <a href="https://rzp.io/i/TB6XE3B"target="_blank" class="btn btn-style btn-outline-primary mt-4">
                                 <span class="fa fa-heart mr-1"></span> Make Donation</a>
                         </address>
                     </div>
@@ -147,7 +149,7 @@
 <!-- //contacts -->
 <div class="map">
     <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.2895687731!2d-74.26055986835598!3d40.697668402590374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sin!4v1562582305883!5m2!1sen!2sin"
+        src="https://maps.google.com/maps?width=674&amp;height=400&amp;hl=en&amp;q=iilm university greater noida&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed""
         frameborder="0" style="border:0" allowfullscreen=""></iframe>
 </div>
 <!-- footer 14 -->
@@ -182,43 +184,42 @@
                       <div class="d-grid grid-col-4 grids-content">
                           <div class="column">
                               <h4>Our Address</h4>
-                                <p>235 Terry, 10001 20C Trolley Square,
-                                  DE 19806  U.S.A.</p>
-                          </div>
-                          <div class="column">
-                              <h4>Call Us</h4>
-                              <p>Mon - Fri 10:30 -18:00</p>
-                              <p><a href="tel:+44-000-888-999">+44-000-888-999</a></p>
-                          </div>
-                          <div class="column">
-                              <h4>Mail Us</h4>
-                              <p><a href="mailto:info@example.com">info@example.com</a></p>
-                              <p><a href="mailto:no.reply@example.com">no.reply@example.com</a></p>
-                          </div>
-                          <div class="column">
-                              <h4>Follow Us On</h4>
-                              <ul>
-                                  <li><a href="#facebook"><span class="fa fa-facebook"
-                                              aria-hidden="true"></span></a>
-                                  </li>
-                                  <li><a href="#linkedin"><span class="fa fa-linkedin"
-                                              aria-hidden="true"></span></a>
-                                  </li>
-                                  <li><a href="#twitter"><span class="fa fa-twitter"
-                                              aria-hidden="true"></span></a>
-                                  </li>
-                                  <li><a href="#google"><span class="fa fa-google-plus"
-                                              aria-hidden="true"></span></a>
-                                  </li>
-                                  <li><a href="#github"><span class="fa fa-github" aria-hidden="true"></span></a>
-                                  </li>
+                              <p>16, Knowledge Park II, IILM University, Greater Noida.</p>
+                            </div>
+                            <div class="column">
+                                <h4>Call Us</h4>
+                                <p>Mon - Fri 10:30 -18:00</p>
+                                <p><a href="tel:+91-9999618958 / +91-9999618928">91-9999618958 / +91-9999618928</a></p>
+                            </div>
+                            <div class="column">
+                                <h4>Mail Us</h4>
+                                <p><a href="mailto:admissions@iilmgsm.ac.in">admissions@iilmgsm.ac.in</a></p>
+                                
+                            </div>
+                            <div class="column">
+                                <h4>Follow Us On</h4>
+                                <ul>
+                                    <li><a href="https://www.facebook.com/iilmuniversity/"target="_blank"><span class="fa fa-facebook"
+                                                aria-hidden="true"></span></a>
+                                    </li>
+                                    <li><a href="https://www.linkedin.com/school/iilm-university-gurugram/"target="_blank"><span class="fa fa-linkedin"
+                                                aria-hidden="true"></span></a>
+                                    </li>
+                                    <li><a href="https://twitter.com/IilmInstitute/"target="_blank"><span class="fa fa-twitter"
+                                                aria-hidden="true"></span></a>
+                                    </li>
+                                    <li><a href="https://www.instagram.com/iilmuniversity_greaternoida/"target="_blank"><span class="fa fa-instagram"
+                                                aria-hidden="true"></span></a>
+                                    </li>
+                                    <li><a href="https://www.youtube.com/c/IILMInstituteforHigherEducation/"target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
+                                    </li>
                               </ul>
                           </div>
                       </div>
                   </div>
                   <div class="footers14-bottom d-flex">
                       <div class="copyright">
-                          <p>© 2022 Save Poor by Dhiraj Kumar Tiwari. All rights reserved. </p>
+                          <p>© 2022 Save Poor by Dhiraj Kumar Tiwari(36), Naveen Kumar Roy (64), Atul Prem (28). All rights reserved. </p>
                       </div>
                       <div class="language-select d-flex">
                           <span class="fa fa-language" aria-hidden="true"></span>
@@ -241,7 +242,7 @@
               window.onscroll = function () {
                   scrollFunction()
               };
-
+t
               function scrollFunction() {
                   if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
                       document.getElementById("movetop").style.display = "block";
