--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <!--//search-right-->
           </li>
           <li class="align-self">
-            <a href="#donate" class="btn btn-style btn-primary ml-lg-3 mr-lg-2"><span class="fa fa-heart mr-1"></span> Donate</a>
+            <a href="https://rzp.io/i/TB6XE3B/"target="_blank"><span class="fa fa-heart mr-1"></span> Donate</a>
           </li>
         </ul>
       </div>
@@ -199,7 +199,7 @@
                 <h3 class="title-big">Over 93% of all Donations go directly to Projects.</h3>
                 <p class="my-3">Under 7% for admin, fundraising, and salaries.</p>
                 <h4>Thank you for your continued Support </h4>
-				<a href="#donate" class="btn btn-style btn-primary mt-sm-5 mt-4"><span class="fa fa-heart mr-1"></span> Donate Now</a>
+				<a href="https://rzp.io/i/TB6XE3B"target="_blank" class="btn btn-style btn-primary mt-sm-5 mt-4"><span class="fa fa-heart mr-1"></span> Donate Now</a>
 			</div>
 		</div>
 	</div>
@@ -214,7 +214,7 @@
                     <img src="assets/images/donate.png" alt="">
                     <h4><a href="#feature" class="title-head">Give Donation.</a></h4>
                     <p class="mb-3">We live a long way. I don't like football timing. But the pain itself is the first thing in the throat of the physician, and it is a pain.</p>
-                    <a href="#donate" class="btn btn-text">Donate Now </a>
+                    <a href="https://rzp.io/i/TB6XE3B"target="_blank" class="btn btn-style btn-primary mt-sm-5 mt-4"><span class="fa fa-heart mr-1"></span> Donate Now</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 grids-feature mt-md-0 mt-5">
@@ -284,7 +284,7 @@
         <div class="welcome-left text-center py-lg-4">
             <span class="fa fa-heart-o"></span>
             <h3 class="title-big">Help the Homeless & Hungry People.</h3>
-            <a href="#donate" class="btn btn-style btn-primary mt-sm-5 mt-4">Donate Now</a>
+            <a href="https://rzp.io/i/TB6XE3B"target="_blank" class="btn btn-style btn-primary mt-sm-5 mt-4"><span class="fa fa-heart mr-1"></span> Donate Now</a>
         </div>
     </div>
 </div>
@@ -474,35 +474,34 @@
                       <div class="d-grid grid-col-4 grids-content">
                           <div class="column">
                               <h4>Our Address</h4>
-                                <p>235 Terry, 10001 20C Trolley Square,
-                                  DE 19806  U.S.A.</p>
+                                <p>16, Knowledge Park II, IILM University, Greater Noida.</p>
                           </div>
                           <div class="column">
                               <h4>Call Us</h4>
                               <p>Mon - Fri 10:30 -18:00</p>
-                              <p><a href="tel:+44-000-888-999">+44-000-888-999</a></p>
+                              <p><a href="tel:+91-9999618958 / +91-9999618928">91-9999618958 / +91-9999618928</a></p>
                           </div>
                           <div class="column">
                               <h4>Mail Us</h4>
-                              <p><a href="mailto:info@example.com">info@example.com</a></p>
-                              <p><a href="mailto:no.reply@example.com">no.reply@example.com</a></p>
+                              <p><a href="mailto:admissions@iilmgsm.ac.in">admissions@iilmgsm.ac.in</a></p>
+                              
                           </div>
                           <div class="column">
                               <h4>Follow Us On</h4>
                               <ul>
-                                  <li><a href="#facebook"><span class="fa fa-facebook"
+                                  <li><a href="https://www.facebook.com/iilmuniversity/"target="_blank"><span class="fa fa-facebook"
                                               aria-hidden="true"></span></a>
                                   </li>
-                                  <li><a href="#linkedin"><span class="fa fa-linkedin"
+                                  <li><a href="https://www.linkedin.com/school/iilm-university-gurugram/"target="_blank"><span class="fa fa-linkedin"
                                               aria-hidden="true"></span></a>
                                   </li>
-                                  <li><a href="#twitter"><span class="fa fa-twitter"
+                                  <li><a href="https://twitter.com/IilmInstitute/"target="_blank"><span class="fa fa-twitter"
                                               aria-hidden="true"></span></a>
                                   </li>
-                                  <li><a href="#google"><span class="fa fa-google-plus"
+                                  <li><a href="https://www.instagram.com/iilmuniversity_greaternoida/"target="_blank"><span class="fa fa-instagram"
                                               aria-hidden="true"></span></a>
                                   </li>
-                                  <li><a href="#github"><span class="fa fa-github" aria-hidden="true"></span></a>
+                                  <li><a href="https://www.youtube.com/c/IILMInstituteforHigherEducation/"target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
                                   </li>
                               </ul>
                           </div>
@@ -510,7 +509,7 @@
                   </div>
                   <div class="footers14-bottom d-flex">
                       <div class="copyright">
-                          <p>© 2022 Save Poor by Dhiraj Kumar Tiwari. All rights reserved. </p>
+                          <p>© 2022 Save Poor by Dhiraj Kumar Tiwari(36), Naveen Kumar Roy (64), Atul Prem (28). All rights reserved. </p>
                       </div>
                       <div class="language-select d-flex">
                           <span class="fa fa-language" aria-hidden="true"></span>
